--- a/system_archiwizacji/archiwum/templates/base_generic.html
+++ b/system_archiwizacji/archiwum/templates/base_generic.html
@@ -16,12 +16,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/">Strona główna</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dodaj_dokument' %}">Dodaj Dokument</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'dodaj_dokument' %}">Dodaj Dokument</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Wyloguj się</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Zaloguj się</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Zarejestruj się</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
