--- a/system_archiwizacji/archiwum/templates/lista_dokumentow.html
+++ b/system_archiwizacji/archiwum/templates/lista_dokumentow.html
@@ -2,15 +2,31 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Lista Dokumentów</h1>
-  <form method="GET" action="{% url 'szukaj_dokumentu' %}">
-    <input type="text" name="query" placeholder="Szukaj dokumentów">
-    <button type="submit">Szukaj</button>
+  <h1 class="my-4">Lista Dokumentów</h1>
+  <form method="GET" action="{% url 'szukaj_dokumentu' %}" class="form-inline mb-4">
+    <input type="text" name="query" class="form-control mr-2" placeholder="Szukaj dokumentów">
+    <button type="submit" class="btn btn-primary">Szukaj</button>
   </form>
-  <ul>
+  {% if messages %}
+    <div class="alert alert-info">
+      {% for message in messages %}
+        {{ message }}
+      {% endfor %}
+    </div>
+  {% endif %}
+  <ul class="list-group">
     {% for dokument in dokumenty %}
-      <li>{{ dokument.tytul }} ({{ dokument.rok }}) - <a href="{% url 'edytuj_dokument' dokument.pk %}">Edytuj</a> - <a href="{% url 'usun_dokument' dokument.pk %}">Usuń</a></li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        {{ dokument.tytul }} ({{ dokument.rok }})
+        <span>
+          <a href="{% url 'edytuj_dokument' dokument.pk %}" class="btn btn-sm btn-warning">Edytuj</a>
+          <a href="{% url 'usun_dokument' dokument.pk %}" class="btn btn-sm btn-danger">Usuń</a>
+          <a href="{% url 'historia_dokumentu' dokument.pk %}" class="btn btn-sm btn-info">Historia</a>
+          <a href="{% url 'wypozycz_dokument' dokument.pk %}" class="btn btn-sm btn-primary">Wypożycz</a>
+          <a href="{% url 'zwroc_dokument' dokument.pk %}" class="btn btn-sm btn-success">Zwróć</a>
+        </span>
+      </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'dodaj_dokument' %}">Dodaj nowy dokument</a>
+  <a href="{% url 'dodaj_dokument' %}" class="btn btn-success mt-4">Dodaj nowy dokument</a>
 {% endblock %}
