--- a/system_archiwizacji/archiwum/templates/lista_dokumentow.html
+++ b/system_archiwizacji/archiwum/templates/lista_dokumentow.html
@@ -1,32 +1,28 @@
-<!-- archiwum/templates/archiwum/lista_dokumentow.html -->
 {% extends "base_generic.html" %}
 
 {% block content %}
   <h1 class="my-4">Lista Dokumentów</h1>
-  <form method="GET" action="{% url 'szukaj_dokumentu' %}" class="form-inline mb-4">
+  <form method="get" action="{% url 'szukaj_dokumentu' %}" class="form-inline mb-4">
     <input type="text" name="query" class="form-control mr-2" placeholder="Szukaj dokumentów">
     <button type="submit" class="btn btn-primary">Szukaj</button>
   </form>
-  {% if messages %}
-    <div class="alert alert-info">
-      {% for message in messages %}
-        {{ message }}
-      {% endfor %}
-    </div>
-  {% endif %}
-  <ul class="list-group">
+  <div class="list-group">
     {% for dokument in dokumenty %}
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        {{ dokument.tytul }} ({{ dokument.rok }})
-        <span>
-          <a href="{% url 'edytuj_dokument' dokument.pk %}" class="btn btn-sm btn-warning">Edytuj</a>
-          <a href="{% url 'usun_dokument' dokument.pk %}" class="btn btn-sm btn-danger">Usuń</a>
-          <a href="{% url 'historia_dokumentu' dokument.pk %}" class="btn btn-sm btn-info">Historia</a>
-          <a href="{% url 'wypozycz_dokument' dokument.pk %}" class="btn btn-sm btn-primary">Wypożycz</a>
-          <a href="{% url 'zwroc_dokument' dokument.pk %}" class="btn btn-sm btn-success">Zwróć</a>
-        </span>
-      </li>
+      <div class="list-group-item list-group-item-action">
+        <div class="row">
+          <div class="col-md-6 d-flex align-items-center">
+            <strong>{{ dokument.tytul }} ({{ dokument.rok }})</strong>
+          </div>
+          <div class="col-md-6 text-right">
+            <a href="{% url 'edytuj_dokument' dokument.pk %}" class="btn btn-warning">Edytyj</a>
+            <a href="{% url 'usun_dokument' dokument.pk %}" class="btn btn-danger">Usuń</a>
+            <a href="{% url 'historia_dokumentu' dokument.pk %}" class="btn btn-info">Historia</a>
+            <a href="{% url 'wypozycz_dokument' dokument.pk %}" class="btn btn-primary">Wypożycz</a>
+            <a href="{% url 'zwroc_dokument' dokument.pk %}" class="btn btn-success">Zwróć</a>
+          </div>
+        </div>
+      </div>
     {% endfor %}
-  </ul>
+  </div>
   <a href="{% url 'dodaj_dokument' %}" class="btn btn-success mt-4">Dodaj nowy dokument</a>
 {% endblock %}
